Add thymeleaf as dependency and as template generator for emails

--- a/src/main/resources/templates/emailTemplate.html
+++ b/src/main/resources/templates/emailTemplate.html
@@ -1,9 +1,9 @@
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <body>
 <div style="background-color:#222222;text-align: center;font-size: 30px;">
     <span style="color:#FFFFFF">easy</span>
     <span style="color:#F5F549">REPAIRS</span>
 </div>
-<p>%s</p>
+<span th:text="${message}"></span>
 </body>
 </html>
